# echlon

./: .gitignore  PLAN.md  run.sh
app/: README.md  index.html  package.json  pnpm-lock.yaml
app/scripts/: mock-daemon.py
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: AgentTurn.tsx  ApprovalPrompt.tsx  CapabilitiesPanel.tsx  ConnectionNotice.tsx  Conversation.tsx  EventRow.tsx  EventStream.tsx  Header.tsx  MessageBar.tsx  SettingsPanel.tsx  TaskComposer.tsx
app/src/components/ui/: BackgroundBlobs.tsx  Button.tsx  Icon.tsx  Markdown.tsx  form.tsx  primitives.tsx
app/src/hooks/: useAgentSession.ts  useDaemonHealth.ts  useTheme.ts
app/src/lib/: cn.ts  config.ts  daemon.ts  types.ts
daemon/: .env.example  README.md  pyproject.toml
daemon/src/echlon/: __init__.py  agent.py  cli.py  config.py  logsetup.py  models.py  policy.py  server.py  session.py
daemon/src/echlon/tools/: __init__.py  browser.py  computer.py  connectors.py  context.py  files.py  shell.py  skills.py  todo.py
daemon/tests/: test_browser.py  test_computer.py  test_connectors.py  test_loop.py  test_models.py  test_policy.py  test_refinements.py  test_robustness.py  test_server.py  test_session.py  test_skills.py
