[package]
name = "echlon"
version = "0.1.0"
description = "Echlon — local-first autonomous agent for macOS (desktop console)"
authors = ["Echlon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The webview talks to the echlon daemon through these Rust commands rather than
# directly, so cross-origin/CSP rules never block it and the SSE stream is parsed
# in one place. rustls avoids a system OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
futures-util = "0.3"

